<resources>
            <string name="banner_adUnit" translatable="false">ca-app-pub-5838182687945471/1062478539</string>
    <string name="icon1Text">Evolution of Currency</string>
    <string name="icon1Desc" translatable="false">image of different currencies</string>
    <string name="lesson1_para1">Story of Money in modern definition is anything that is accepted by a group of people in exchange for goods, services, and recourses. According to modern economists, money is defined by to play the following three roles:</string>
    <string name="lesson1_heading1">A STORE OF VALUE</string>
    <string name="lesson1_para2">Money allows you to postpone purchase or consumption until a later date</string>
    <string name="lesson1_heading2">A UNIT OF ACCOUNT &amp; MEASUREMENT</string>
    <string name="lesson1_para3">Money allows to assign value to different goods without having to compare them. For example, instead of saying that a car is worth 6 horses, you can say that a car is worth 1000€.</string>
    <string name="lesson1_heading3">A MEDIUM OF EXCHANGE</string>
    <string name="lesson1_para4">Money acts as medium to indirectly trade goods or services.</string>
    <string name="lesson1_para5">There is however a disagreement on whether money is an intangible concept or tangible (physical)</string>
    <string name="lesson1_para6">Some say that money cannot be touched or smelled, while currency in form of coins and notes are presentations and manifestations of a form of money.</string>
    <string name="lesson1_para7">To better understand how modern money came to be, we need to briefly look at how money has evolved historically and took on the functions it has got today.</string>
    <string name="lesson1_para8">According to the recorded history for around 3000b.c, people were trading goods in exchange for other good directly. They would for example trade fruit for food or some pairs of shoes for a goat, as so called “the barter system”. It was immensely difficult to find someone, who would want to exchange something you need, in exchange for what you have. Even more difficult it was to agree on the value of the goods to be exchanged.</string>
    <string name="lesson1_para9">Later on, people started to use commodities such as wool, wheat, corn and etc. for trading. It was easier to maintain, carry and store these goods, and they were more widely accepted. These functions added even more to the value and demand for some commodities than others. Since these commodities functioned both as goods and mediums of exchange, consequently gold and silver coins were born as new mediums of trade, which had an even higher portability and storability.</string>
    <string name="lesson1_para10">With the development and evolvement of human constitutions, coins were furthermore standardized and reached farther lands. Subsequently vaster and more frequent territorial and cross territorial trades were possible.</string>
    <string name="icon1bText">From Cheques to Fiat Money</string>
    <string name="lesson1b_para1">Before 1st world war, most currencies were directly pegged to gold. England was still a super power and a leading world economy. Since England was a major world trader, sterling pond was used instead of gold and therefore, was the world reserve currency. The word “reserve” for currencies meant they were exchangeable with gold. After the first world war England’s economy was devastated. They had spent 25% of their GDP on war and had lost more than 20% of their foreign assets.</string>
    <string name="lesson1b_para2">Countries’ gold reserves grew smaller, and there was a need for a new system, since many countries couldn’t back their currencies with gold. After the first world war many currencies were no longer directly linked to gold and had to be exchanged to a third international currency, which was directly linked to gold. European countries were purchasing goods and armament from the US, and even England was borrowing huge sums from the US, because its gold reserves were down.</string>
    <string name="lesson1b_para3">US entered the 1st world later and also for geographic reasons was less affected by the war. US had not only lost much in the 1st world was but it had also some gains. In the wake the Great Depression in 1930s England suspended its gold standard. The US survived and recovered better than others soon.</string>
    <string name="lesson1b_para4">This meant that sterling pond was no longer standing alongside the US-dollar as an international reserve currency.</string>
    <string name="lesson1b_para5">When England declared war on Germany, it had previously used its gold and cash reserves. Therefore, it was borrowing again in large sums to pay for ammunition and raw materials. During this time, the US whole labor was employed to supply raw material for war.</string>
    <string name="lesson1b_para6">The shared need for a reliable global reserve currency in 1944, led to Bretton Woods Agreement, where 44 nations accepted the US dollar global reserve currency, since US had the largest gold supply.</string>
    <string name="lesson1b_para7">Decades later the gold back dollar had to collapse. The US suffered economically during the Vietnam war. It had to print more paper money back by treasury debt, because more funds were need for Vietnam war. Countries had already predicted this inflation, and in early 1970s countries started demanding gold in exchanges for their dollars.</string>
    <string name="lesson1b_para8">Dollars superiority as global reserve currency and America’s status as superpower was on the verge of a collapse.</string>
    <string name="lesson1b_para9">This was when John D. Rockefeller came up with a solution. He went to his slaves. He persuaded the Shah in Iran and the apparently Muslim but pro-Zionist Al-Saud family and other Arab leaders to sell oil in dollars only. In other currencies oil prices went to the skies.</string>
    <string name="lesson1b_para10">Saudi Arabia and other Zionist-slave Muslim-leaders did not only save the US from dying out but increased its power and economic dictatorship on the rest of the world. Countries instead of demanding Gold in exchange for dollar, were now desperate to continuously buy dollars to be able to purchase oil. In 1971 President Richard Nixon decoupled US-dollar from gold.</string>
    <string name="lesson1b_para11">Then we entered the era of fiat money and long story short, later with the development of computers and internet money and banking got digitalized.</string>
    <string name="lesson1b_para12">With the digitization of money and banking, a new evolution was on the way.</string>
    <string name="icon2Desc" translatable="false">image of a bitcoin</string>
    <string name="icon16Text">Candlestick Chart</string>
    <string name="icon16Desc" translatable="false">candlesticks in red and green</string>
    <string name="lesson16_para1">Candlestick charts were originated in Japan over 100 years before the West had developed the bar charts and point-and-figure charts. In the 1700s, a Japanese man known as Homma discovered that as there was a link between price and the supply and demand of rice, the markets also were strongly influenced by the emotions of traders.</string>
    <string name="lesson16_para2">The candlesticks are used for identifying trading patterns which help the technical analyst to set up their trades. These candlestick patterns are used for predicting the future direction of the price movements. The candlestick patterns are formed by grouping two or more candlesticks in a certain way. Sometimes powerful signals can be also given by just one candlestick.</string>
    <string name="lesson16_para3">A daily candlestick charts shows the security’s open, high, low, and close price for the day. The candlestick’s wide or rectangle part is called the “real body” which shows the link between opening and closing prices. This real body shows the price range between the open and close of that day’s trading.</string>
    <string name="lesson16_para4">When the real body is filled, black or red then it means that the close is lower than the open and is known as the bearish candle. It shows that the prices opened, the bears pushed the prices down and closed lower than the opening price.</string>
    <string name="lesson16_para5">If the real body is empty, white or green then it means that the close was higher than the open known as the bullish candle. It shows that the prices opened, the bulls pushed the prices up and closed higher than the opening price.</string>
    <string name="lesson16_para6">The thin vertical lines above and below the real body is known as the wicks or shadows which represents the high and low prices of the trading session. The upper shadow shows the high price and lower shadow shows the low prices reached during the trading session.</string>
    <string name="lesson16_img1Desc" translatable="false">properties of green and red candlesticks</string>
    <string name="lesson16_para7">The candlestick patterns can be divided into: \n<ul><li>Continuation Patterns</li>\n<li>Bullish Reversal Patterns</li>\n<li>Bearish Reversal Patterns</li></ul></string>
    <string name="lesson16_para8">In this free course, we will discuss all 30 powerful candlestick patterns, but before that let us discuss how to read candlestick charts.</string>
    <string name="icon6a_title">Moving Average (MA)</string>
    <string name="icon6b_title">Exponential Moving Average (EMA)</string>
    <string name="icon6c_title">Moving Average Convergence Divergence (MACD)</string>
    <string name="icon6d_title">Relative Strength Index (RSI)</string>
    <string name="icon6e_title">Bollinger Bands</string>
    <string name="icon6f_title">Ichimoku Cloud</string>
    <string name="lesson6d_para1">Relative Strength Index, or RSI, is a popular indicator developed by a technical analyst named J. Welles Wilder, that helps traders evaluate the strength of the current market.</string>
    <string name="lesson6d_para2">RSI is similar to Stochastic in that it identifies overbought and oversold conditions in the market.</string>
    <string name="lesson6d_para3">It is also scaled from 0 to 100.</string>
    <string name="lesson6d_para4">Typically, readings of 30 or lower indicate oversold market conditions and an increase in the possibility of price strengthening (going up). Some traders interpret that an oversold currency pair is an indication that the falling trend is likely to reverse, which means it’s an opportunity to buy. Some traders interpret that an overbought currency pair is an indication that the rising trend is likely to reverse, which means it’s an opportunity to sell.</string>
    <string name="lesson6d_para5">Readings of 70 or higher indicate overbought conditions and an increase in the possibility of price weakening (going down).</string>
    <string name="lesson6d_para6">In addition to the overbought and oversold indicators mentioned above, traders who use the Relative Strength Index (RSI) indicator also look for centerline crossovers. A movement from below the centerline (50) to above indicates a rising trend.</string>
    <string name="lesson6d_para7">A rising centerline crossover occurs when the RSI value crosses ABOVE the 50 line on the scale, moving towards the 70 line. This indicates the market trend is increasing in strength, and is seen as a bullish signal until the RSI approaches the 70 line. A movement from above the centerline (50) to below indicates a falling trend.</string>
    <string name="lesson6d_para8">A falling centerline crossover occurs when the RSI value crosses BELOW the 50 line on the scale, moving towards the 30 line. This indicates the market trend is weakening in strength, and is seen as a bearish signal until the RSI approaches the 30 line.</string>
    <string name="icon6_desc" translatable="false">a screen showing a trading chart</string>
</resources>