<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".Lesson2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal"
        android:orientation="vertical">

        <TextView
            style="@style/titleTextStyle"
            android:textAlignment="center"
            android:text="@string/icon1bText"/>

        <ImageView
            style="@style/fragment_image"
            android:src="@drawable/icon1b"
            android:contentDescription="@string/icon2Desc" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para1" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para2" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para3" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para4" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para5" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para6" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para7" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para8" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para9" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para10" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para11" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1b_para12" />

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_adUnit"
                    style="@style/fragment_banner_ad" />

    </LinearLayout>

</ScrollView>