<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".Lesson1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal"
        android:orientation="vertical">

        <TextView
            style="@style/titleTextStyle"
            android:textAlignment="center"
            android:text="@string/icon1Text"/>

        <ImageView
            style="@style/fragment_image"
            android:src="@drawable/icon1"
            android:contentDescription="@string/icon1Desc"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para1" />

        <TextView
            style="@style/titleTextStyle"
            android:text="@string/lesson1_heading1"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para2" />

        <TextView
            style="@style/titleTextStyle"
            android:text="@string/lesson1_heading2" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para3" />

        <TextView
            style="@style/titleTextStyle"
            android:text="@string/lesson1_heading3" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para4" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para5" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para6" />

    <!--        <com.google.android.gms.ads.AdView-->
    <!--            android:id="@+id/adView1"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            ads:adSize="BANNER"-->
    <!--            ads:adUnitId="@string/banner_adUnit"-->
    <!--            android:layout_margin="@dimen/normal"-->
    <!--            android:padding="@dimen/unit"/>-->

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para7"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para8"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para9"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson1_para10"/>

    <!--        <com.google.android.gms.ads.AdView-->
    <!--            android:id="@+id/adView3"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            ads:adSize="BANNER"-->
    <!--            ads:adUnitId="@string/banner_adUnit"-->
    <!--            android:layout_margin="@dimen/normal"-->
    <!--            android:padding="@dimen/unit"/>-->

    </LinearLayout>

</ScrollView>