<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".Lesson6dFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal"
        android:orientation="vertical">

        <TextView
            style="@style/titleTextStyle"
            android:textAlignment="center"
            android:text="@string/icon6d_title"/>

        <ImageView
            style="@style/fragment_image"
            android:src="@drawable/icon6d"
            android:contentDescription="@string/icon6_desc"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para1" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para2" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para3" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para4" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para5" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lesson6d_img1"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:contentDescription="@string/lesson16_img1Desc"/>

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para6" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para7" />

        <TextView
            style="@style/paragraphStyle"
            android:text="@string/lesson6d_para8" />


                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_adUnit"
                    style="@style/fragment_banner_ad" />

    </LinearLayout>

</ScrollView>