<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:paddingVertical="@dimen/small"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.92"
        android:scrollbars="vertical">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon1"
                style="@style/icon_image"
                android:src="@drawable/icon6a"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6a_title" />

            <ImageView
                android:id="@+id/icon2"
                style="@style/icon_image"
                android:src="@drawable/icon6b"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6b_title" />

            <ImageView
                android:id="@+id/icon3"
                style="@style/icon_image"
                android:src="@drawable/icon6c"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6c_title" />

            <ImageView
                android:id="@+id/icon4"
                style="@style/icon_image"
                android:src="@drawable/icon6d"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6d_title" />

            <ImageView
                android:id="@+id/icon5"
                style="@style/icon_image"
                android:src="@drawable/icon6e"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6e_title" />

            <ImageView
                android:id="@+id/icon6"
                style="@style/icon_image"
                android:src="@drawable/icon6f"
                android:contentDescription="@string/icon6_desc" />

            <TextView
                style="@style/fragmentsTextStyle"
                android:text="@string/icon6f_title" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>